--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <div class="navbar">
-        <div class="nav-btn">
+        <div class="nav-btn home active">
             <span class="text">HOME</span>
             <i class="fa-solid fa-house"></i>
         </div>
-        <div class="nav-btn">
+        <div class="nav-btn about">
             <span class="text">ABOUT</span>
             <i class="fa-solid fa-address-card"></i>
         </div>
-        <div class="nav-btn">
+        <div class="nav-btn projects">
             <span class="text">PROJECTS</span>
             <i class="fa-solid fa-briefcase"></i>
         </div>
-        <div class="nav-btn">
+        <div class="nav-btn contact">
             <span class="text">CONTACT</span>
             <i class="fa-solid fa-envelope-open-text"></i>
         </div>
     </div>
+
+    <div class="panel"></div>
     <script src="app.js"></script>
 </body>
 </html>
