--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    
     <div class="navbar">
         <div class="nav-btn home active">
             <span class="text">HOME</span>
             <i class="fa-solid fa-house"></i>
-        </div>
-        <div class="nav-btn about">
-            <span class="text">ABOUT</span>
-            <i class="fa-solid fa-address-card"></i>
         </div>
         <div class="nav-btn projects">
             <span class="text">PROJECTS</span>
@@ -32,7 +29,8 @@
         </div>
     </div>
 
-    <div class="panel"></div>
+    <div class="profile"></div>
+
     <script src="app.js"></script>
 </body>
 </html>
