--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       </video>
     
     <div class="wrapper">
-        <div id="home" class="quarter left-top"><p>HOME</p><i class="fas fa-home"></i></div>
-        <div id="about" class="quarter right-top"><p>ABOUT</p><i class="fas fa-user-alt"></i></div>
-        <div id="projects" class="quarter left-bottom"><i class="fas fa-folder"></i><p>PROJECTS</p></div>
-        <div id="contact" class="quarter right-bottom"><i class="fas fa-phone"></i><p>CONTACT</p></div>
+        <div id="home" class="quarter left-top"></div>
+        <div id="about" class="quarter right-top"></div>
+        <div id="projects" class="quarter left-bottom"></div>
+        <div id="contact" class="quarter right-bottom"></div>
       </div>
+
+      <!-- <div class="panel">
+        <i class="fas fa-times-circle close"></i>
+      </div> -->
 
     <script src="app.js"></script>
 </body>
