interface complete, added music

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 </head>
 <body>
 
+    <audio src="To New Heights.mp3" autoplay loop></audio>
+
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
         <source src="video.mp4" type="video/mp4">
-      </video>
+    </video>
     
     <div class="wrapper">
         <div id="home" class="quarter left-top"></div>
         <div id="about" class="quarter right-top"></div>
         <div id="projects" class="quarter left-bottom"></div>
         <div id="contact" class="quarter right-bottom"></div>
-      </div>
+    </div>
+
+    <div class="equalizer"><i class="fas fa-pause"></i></div>
 
       <!-- <div class="panel">
         <i class="fas fa-times-circle close"></i>
