--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <audio src="To New Heights.mp3" autoplay loop></audio>
+    <audio src="To New Heights.mp3" loop></audio>
 
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
         <source src="video.mp4" type="video/mp4">
@@ -26,7 +26,7 @@
         <div id="contact" class="quarter right-bottom"></div>
     </div>
 
-    <div class="equalizer"><i class="fas fa-pause"></i></div>
+    <div class="equalizer" style="filter:grayscale(100%)"><p>CRANK UP SOME MUSIC!</p></div>
 
       <!-- <div class="panel">
         <i class="fas fa-times-circle close"></i>
