--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="contact" class="quarter right-bottom"></div>
     </div>
 
-    <div class="equalizer" style="filter:grayscale(100%)"><p>CRANK UP SOME MUSIC!</p></div>
+    <div class="equalizer" style="filter:grayscale(100%)"><p>PLAY SOME MUSIC!</p></div>
 
       <!-- <div class="panel">
         <i class="fas fa-times-circle close"></i>
