--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="contact" class="quarter right-bottom"></div>
     </div>
 
-    <div class="equalizer" style="filter:grayscale(100%)"><p>PLAY SOME MUSIC!</p></div>
+    <!-- <div class="equalizer" style="filter:grayscale(100%)"><p>PLAY SOME MUSIC!</p></div> -->
 
       <!-- <div class="panel">
         <i class="fas fa-times-circle close"></i>
