--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="/images/thai.png" />
+                <img src="./images/thai.png" />
             </div>
         </div>
         <div class="row">
@@ -154,7 +154,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="/images/frog.png" />
+                <img src="./images/frog.png" />
             </div>
         </div>
         <div class="row">
@@ -182,7 +182,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="/images/mixer.png" />
+                <img src="./images/mixer.png" />
             </div>
         </div>
         <div class="row">
@@ -208,7 +208,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="/images/hearthstone.png" />
+                <img src="./images/hearthstone.png" />
             </div>
         </div>
         <div class="row">
@@ -236,7 +236,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="/images/jobly.png" />
+                <img src="./images/jobly.png" />
             </div>
         </div>
     </section>
