--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="mobile-menu">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="">Download CV</a></li>
+            <li><a href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -58,45 +58,45 @@
     <section id="about" class="about">
         <div class="section-header">
             <h2>About Me</h2>
-            <p>Software Engineer based in the St. Louis Metropolitan area</p>
+            <p>I am a Full stack Software Engineer based in the St. Louis Metropolitan area</p>
         </div>
         <div class="about-container">
             <div class="about-bio">
                 <p>
-                Hello World! My name is Deyan and I am Full-stack Software Engineer.
+                Hello World! My name is Deyan and I am Full-stack Software Engineer, originally from Bulgaria.
                 I enjoy all layers of the process and whether it's building a Front end with 
-                React.js or just vanilla HTML and CSS, working with APIs with Flask and Node, or creating and 
+                React.js or just vanilla HTML and CSS, working with APIs with Flask or Express.js, or creating and 
                 maintaning relational databases, I enjoy every second of what I do. 
-                Tackling complex problems and being able to express your creative side is what always drew me 
+                Tackling complex problems and being able to express my creative side is what always drew me 
                 to this industry ever since I was a kid. <br> <br>
                 Outside of Software Engineering I have close to 10 years of experience in the restaurant industry 
                 where I learned and applied crucial concepts such as teamwork, customer service, and 
                 performing under intense pressure. <br> <br>
-                Currently I work part-time as a Web Developer for a company remotely, but I am still on the lookout for that first 
-                full-time position in either a Front-end, Back-end, or Full stack capacity. I am located in the 
+                Currently I work part time as a Web Developer for a company remotely, but I am still on the lookout for that first 
+                full time position in either a Front end, Back end, or Full stack capacity. I am located in the 
                 St. Louis Metropolitan area, but I am also open to remote work, as well as relocating. <br> <br>
                 So if you like what you see, feel free to download my resume or reach out to me directly! I am looking 
                 forward to hearing from you!
                 
                 </p> <br>
-                <a target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button class="btn-live">RESUME</button></a> 
+                <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button class="btn-live">RESUME</button></a> 
             </div>
             <div class="about-highlight">Tools and Languages</div>
             <div class="about-skills">
-                <i class="devicon-javascript-plain colored"></i>
-                <i class="devicon-python-plain-wordmark colored"></i>
-                <i class="devicon-postgresql-plain-wordmark colored"></i>
-                <i class="devicon-mysql-plain colored"></i>
-                <i class="devicon-react-original colored"></i>
-                <i class="devicon-nodejs-plain colored"></i>
-                <i class="devicon-express-original colored"></i>
-                <i class="devicon-flask-original colored"></i>
-                <i class="devicon-bootstrap-plain-wordmark colored"></i>
-                <i class="devicon-jquery-plain-wordmark colored"></i>
-                <i class="devicon-webflow-original colored"></i>
-                <i class="devicon-git-plain colored"></i>
-                <i class="devicon-github-original colored"></i>
-                <i class="devicon-jest-plain colored"></i>
+                <i aria-label="JavaScript" class="devicon-javascript-plain colored"></i>
+                <i aria-label="Python" class="devicon-python-plain-wordmark colored"></i>
+                <i aria-label="PostgreSQL" class="devicon-postgresql-plain-wordmark colored"></i>
+                <i aria-label="MySQL" class="devicon-mysql-plain colored"></i>
+                <i aria-label="React.js" class="devicon-react-original colored"></i>
+                <i aria-label="Node.js" class="devicon-nodejs-plain colored"></i>
+                <i aria-label="Express.js" class="devicon-express-original colored"></i>
+                <i aria-label="Flask" class="devicon-flask-original colored"></i>
+                <i aria-label="Bootstrap" class="devicon-bootstrap-plain-wordmark colored"></i>
+                <i aria-label="jQuery" class="devicon-jquery-plain-wordmark colored"></i>
+                <i aria-label="Webflow" class="devicon-webflow-original colored"></i>
+                <i aria-label="Git" class="devicon-git-plain colored"></i>
+                <i aria-label="GitHub" class="devicon-github-original colored"></i>
+                <i aria-label="Jest" class="devicon-jest-plain colored"></i>
             </div>
         </div>
     </section>
@@ -113,9 +113,9 @@
                 <h3 class="project-title">
                     Thai Sport Bodyworks™
                 </h3>
-                <p class="icon-stack">
-                    <i class="devicon-webflow-original colored"></i>
-                    <i style="background-color: black;" class="devicon-javascript-plain colored"></i>
+                <p class="icon-stack" aria-label="Webflow, JavaScript">
+                    <i aria-hidden="true" class="devicon-webflow-original colored"></i>
+                    <i aria-hidden="true" style="background-color: black;" class="devicon-javascript-plain colored"></i>
                 </p>
                 <p class="project-description">
                     Thai Sport Bodyworks™ is San Diego's premier massage/sports therapy center. 
@@ -130,7 +130,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="./images/thai.png" />
+                <img alt="Screenshot of Thai Sport Bodyworks™ website" src="./images/thai.png" />
             </div>
         </div>
         <div class="row">
@@ -138,8 +138,8 @@
                 <h3 class="project-title">
                     Frog Feast
                 </h3>
-                <p class="icon-stack">
-                    <i style="background-color: black;" class="devicon-javascript-plain colored"></i>
+                <p class="icon-stack" aria-label="JavaScript">
+                    <i aria-hidden="true" style="background-color: black;" class="devicon-javascript-plain colored"></i>
                 </p>
                 <p class="project-description">
                     Frog Feast is a browser-based game where you are a frog, eating bugs for a high score. 
@@ -154,7 +154,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="./images/frog.png" />
+                <img alt="Screenshot of frog" src="./images/frog.png" />
             </div>
         </div>
         <div class="row">
@@ -162,12 +162,12 @@
                 <h3 class="project-title">
                     Mixer
                 </h3>
-                <p class="icon-stack">
-                    <i class="devicon-react-original colored"></i>
-                    <i class="devicon-nodejs-plain colored"></i>
-                    <i class="devicon-express-original colored"></i>
-                    <i class="devicon-postgresql-plain-wordmark colored"></i>
-                    <i class="devicon-jest-plain colored"></i>
+                <p class="icon-stack" aria-label="React.js, Node.js, Express.js, PostgreSQL, Jest">
+                    <i aria-hidden="true" class="devicon-react-original colored"></i>
+                    <i aria-hidden="true" class="devicon-nodejs-plain colored"></i>
+                    <i aria-hidden="true" class="devicon-express-original colored"></i>
+                    <i aria-hidden="true" class="devicon-postgresql-plain-wordmark colored"></i>
+                    <i aria-hidden="true" class="devicon-jest-plain colored"></i>
                 </p>
                 <p class="project-description">
                     Mixer is a Full-stack cocktail mixology application that allows users to
@@ -182,7 +182,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="./images/mixer.png" />
+                <img alt="Screenshot of cocktails" src="./images/mixer.png" />
             </div>
         </div>
         <div class="row">
@@ -190,11 +190,11 @@
                 <h3 class="project-title">
                     The Forge
                 </h3>
-                <p class="icon-stack">
-                    <i style="background-color: black;" class="devicon-javascript-plain colored"></i>
-                    <i style="background-color: blue;" class="devicon-python-plain-wordmark colored"></i>
-                    <i class="devicon-flask-original colored"></i>
-                    <i class="devicon-postgresql-plain-wordmark colored"></i>
+                <p class="icon-stack" aria-label="Python, JavaScript, Flask, PostgreSQL">
+                    <i aria-hidden="true" style="background-color: black;" class="devicon-javascript-plain colored"></i>
+                    <i aria-hidden="true" style="background-color: blue;" class="devicon-python-plain-wordmark colored"></i>
+                    <i aria-hidden="true" class="devicon-flask-original colored"></i>
+                    <i aria-hidden="true" class="devicon-postgresql-plain-wordmark colored"></i>
                 </p>
                 <p class="project-description">
                     The Forge is a Full-stack, deck-building application for the digital card game Hearthstone. 
@@ -208,7 +208,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="./images/hearthstone.png" />
+                <img alt="Screenshot of The Forge" src="./images/hearthstone.png" />
             </div>
         </div>
         <div class="row">
@@ -216,17 +216,17 @@
                 <h3 class="project-title">
                     Jobly
                 </h3>
-                <p class="icon-stack">
-                    <i class="devicon-react-original colored"></i>
-                    <i class="devicon-nodejs-plain colored"></i>
-                    <i class="devicon-express-original colored"></i>
-                    <i class="devicon-postgresql-plain-wordmark colored"></i>
-                    <i class="devicon-jest-plain colored"></i>
+                <p class="icon-stack" aria-label="React.js, Node.js, Express.js, PostgreSQL, Jest">
+                    <i aria-hidden="true" class="devicon-react-original colored"></i>
+                    <i aria-hidden="true" class="devicon-nodejs-plain colored"></i>
+                    <i aria-hidden="true" class="devicon-express-original colored"></i>
+                    <i aria-hidden="true" class="devicon-postgresql-plain-wordmark colored"></i>
+                    <i aria-hidden="true" class="devicon-jest-plain colored"></i>
                 </p>
                 <p class="project-description">
                     Jobly is a Full-stack, mock job-searching application where users can search and "apply" 
                     for positions listed by fictional companies. <br> <br>
-                    You'll need an account so either create one or use this one: <br><br>
+                    You will need an account, so either create one or use this one: <br><br>
                     username: "testuser" <br>
                     password: "password"
                 </p>
@@ -236,7 +236,7 @@
                 </p>
             </div>
             <div class="column2">
-                <img src="./images/jobly.png" />
+                <img alt="Screenshot of Jobly" src="./images/jobly.png" />
             </div>
         </div>
     </section>
@@ -248,10 +248,10 @@
         <div class="contact-details">
             <h3 class="contact-heading">Let's get in touch!</h3>
             <div class="contact-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/"><i class="fab fa-linkedin linkedin"></i></a>
-                <a target="_blank" href="https://github.com/lemonstener"><i class="fab fa-github github"></i></a>
-                <a target="_blank" href="mailto: deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
-                <a target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
+                <a aria-label="Deyan Vasilev on LinkedIn" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/"><i class="fab fa-linkedin linkedin"></i></a>
+                <a aria-label="Deyan Vasilev on GitHub" target="_blank" href="https://github.com/lemonstener"><i class="fab fa-github github"></i></a>
+                <a aria-label="Send an email to Deyan Vasilev" target="_blank" href="mailto: deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
+                <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
             </div>
         </div>
     </section>
