aria-label added to skills

--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                 <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button class="btn-live">RESUME</button></a> 
             </div>
             <div class="about-highlight">Tools and Languages</div>
-            <div class="about-skills">
-                <i aria-label="JavaScript" class="devicon-javascript-plain colored"></i>
-                <i aria-label="Python" class="devicon-python-plain-wordmark colored"></i>
-                <i aria-label="PostgreSQL" class="devicon-postgresql-plain-wordmark colored"></i>
-                <i aria-label="MySQL" class="devicon-mysql-plain colored"></i>
-                <i aria-label="React.js" class="devicon-react-original colored"></i>
-                <i aria-label="Node.js" class="devicon-nodejs-plain colored"></i>
-                <i aria-label="Express.js" class="devicon-express-original colored"></i>
-                <i aria-label="Flask" class="devicon-flask-original colored"></i>
-                <i aria-label="Bootstrap" class="devicon-bootstrap-plain-wordmark colored"></i>
-                <i aria-label="jQuery" class="devicon-jquery-plain-wordmark colored"></i>
-                <i aria-label="Webflow" class="devicon-webflow-original colored"></i>
-                <i aria-label="Git" class="devicon-git-plain colored"></i>
-                <i aria-label="GitHub" class="devicon-github-original colored"></i>
-                <i aria-label="Jest" class="devicon-jest-plain colored"></i>
+            <div class="about-skills" aria-label="JavaScipt, Python, PostgreSQL, MySQL, React.js, Node.js, Express.js, Flask, Bootstrap, jQuery, Webflow, Git, GitHub, Jest">
+                <i aria-hidden="true" class="devicon-javascript-plain colored"></i>
+                <i aria-hidden="true" class="devicon-python-plain-wordmark colored"></i>
+                <i aria-hidden="true" class="devicon-postgresql-plain-wordmark colored"></i>
+                <i aria-hidden="true" class="devicon-mysql-plain colored"></i>
+                <i aria-hidden="true" class="devicon-react-original colored"></i>
+                <i aria-hidden="true" class="devicon-nodejs-plain colored"></i>
+                <i aria-hidden="true" class="devicon-express-original colored"></i>
+                <i aria-hidden="true" class="devicon-flask-original colored"></i>
+                <i aria-hidden="true" class="devicon-bootstrap-plain-wordmark colored"></i>
+                <i aria-hidden="true" class="devicon-jquery-plain-wordmark colored"></i>
+                <i aria-hidden="true" class="devicon-webflow-original colored"></i>
+                <i aria-hidden="true" class="devicon-git-plain colored"></i>
+                <i aria-hidden="true" class="devicon-github-original colored"></i>
+                <i aria-hidden="true" class="devicon-jest-plain colored"></i>
             </div>
         </div>
     </section>
