steve added to projects

--- a/index.html
+++ b/index.html
@@ -194,6 +194,33 @@
                 </div>
             </div>
             </li>
+
+            <li>
+                <div class="row">
+                <div class="column1">
+                    <h3 class="project-title">
+                        Steve
+                    </h3>
+                    <p class="icon-stack" aria-label="React.js, Node.js, Express.js, PostgreSQL, Jest">
+                        <i class="devicon-html5-plain colored"></i>
+                        <i class="devicon-css3-plain colored"></i>
+                    </p>
+                    <p class="project-description">
+                        Steve is portfolio website template built with plain HTML and CSS that focuses on providing a clean,
+                        simplistic UI and great mobile responsiveness. It provides a good starting point for people 
+                        who need a portfolio website, who can then make it theirs by adding their own styling. <br>
+                        This portfolio website uses Steve as the base.
+                    </p>
+                    <p class="project-links">
+                        <a target="_blank" href="https://lemonstener.github.io/steve/"><button class="btn-live">LIVE</button></a> 
+                        <a target="_blank" href="https://github.com/lemonstener/steve"><button class="btn-source">GitHub</button></a>
+                    </p>
+                </div>
+                <div class="column2">
+                    <img alt="Screenshot of cocktails" src="./images/steve.png" />
+                </div>
+            </div>
+            </li>
             
             <li>
                 <div class="row">
