broken link fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation bar -->
 
     <header>
-        <div id="brand"><a href="/">Deyan Vasilev</a></div>
+        <div id="brand"><a href="/deyan-portfolio">Deyan Vasilev</a></div>
         <nav>
           <ul>
             <li><a href="#hero">Home</a></li>
