--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </p>
                 </div>
                 <div class="column2">
-                    <img alt="Screenshot of cocktails" src="./images/mixer.png" />
+                    <img alt="Screenshot of cocktails" src="./images/cocktailsearch.png" />
                 </div>
             </div>
             </li>
@@ -251,7 +251,7 @@
             </div>
             </li>
             
-            <li>
+            <!-- <li>
                 <div class="row">
                 <div class="column1">
                     <h3 class="project-title">
@@ -280,7 +280,7 @@
                     <img alt="Screenshot of Jobly" src="./images/jobly.png" />
                 </div>
             </div>
-            </li>
+            </li> -->
             
         </ul>
     </section>
